--- a/package.json
+++ b/package.json
@@ -28,12 +28,17 @@
   },
   "dependencies": {
     "babel-runtime": "6.23.0",
+    "install": "^0.10.1",
     "isomorphic-fetch": "^2.2.1",
+    "npm": "^5.5.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-redux": "^5.0.5",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.1.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-observable": "^0.16.0",
+    "redux-promise-middleware": "^4.4.1",
+    "rxjs": "^5.5.0"
   },
   "engines": {
     "node": "6.11.1",
